--- a/LogMergeRx/MainWindow.xaml
+++ b/LogMergeRx/MainWindow.xaml
@@ -170,13 +170,15 @@
                         <Grid Background="#343434">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="8" />
-                                <ColumnDefinition Width="150" />
-                                <ColumnDefinition Width="70" />
+                                <ColumnDefinition Width="140" />
+                                <ColumnDefinition Width="60" />
+                                <ColumnDefinition Width="130" />
                                 <ColumnDefinition />
                             </Grid.ColumnDefinitions>
                             <TextBlock Grid.Column="1" Text="Date" Margin="5,2" />
                             <TextBlock Grid.Column="2" Text="Level" Margin="5,2"/>
-                            <TextBlock Grid.Column="3" Text="Message" Margin="5,2"/>
+                            <TextBlock Grid.Column="3" Text="Source" Margin="5,2"/>
+                            <TextBlock Grid.Column="4" Text="Message" Margin="5,2"/>
                         </Grid>
                         <ScrollViewer Grid.Row="1" CanContentScroll="True" Focusable="False"
                                       HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Visible">
@@ -196,8 +198,9 @@
                     <Grid>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="8" />
-                            <ColumnDefinition Width="150" />
-                            <ColumnDefinition Width="70" />
+                            <ColumnDefinition Width="140" />
+                            <ColumnDefinition Width="60" />
+                            <ColumnDefinition Width="130" />
                             <ColumnDefinition />
                         </Grid.ColumnDefinitions>
                         <Border VerticalAlignment="Stretch"
@@ -217,7 +220,9 @@
                                    Text="{Binding Level}"
                                    Foreground="{Binding Level, Converter={StaticResource LevelToForegroundConverter}}" />
 
-                        <mvvm:SelectableTextBlock Grid.Column="3" Margin="3"
+                        <TextBlock Grid.Column="3" Text="{Binding Source}" Margin="3"/>
+
+                        <mvvm:SelectableTextBlock Grid.Column="4" Margin="3"
                                    local:HighlightHelper.Text="{Binding Message}"
                                    local:HighlightHelper.Highlight="{Binding DataContext.SearchRegex.Value, ElementName=Root}"
                                    TextWrapping="Wrap" />
