--- a/LogMergeRx/MainWindow.xaml
+++ b/LogMergeRx/MainWindow.xaml
@@ -125,7 +125,7 @@
                         <TextBlock Text="Contains text, case insensitive" Style="{StaticResource ExplanationText}" />
                     </StackPanel>
                 </GroupBox>
-                <GroupBox Header="Loaded files" Style="{StaticResource H1}">
+                <GroupBox Header="Loaded files" Style="{StaticResource H1}" DataContext="{Binding FileFilterViewModel}">
                     <StackPanel>
                         <ListBox x:Name="AllFiles" ItemsSource="{Binding AllFiles}" SelectionMode="Extended"
                             SelectionChanged="AllFiles_SelectionChanged" HorizontalContentAlignment="Stretch">
@@ -209,7 +209,7 @@
                             <Border.ToolTip>
                                 <MultiBinding Converter="{StaticResource FileIdMapper}">
                                     <Binding Path="FileId" />
-                                    <Binding Path="DataContext.AllFiles" ElementName="Root" />
+                                    <Binding Path="DataContext.FileFilterViewModel.AllFiles" ElementName="Root" />
                                 </MultiBinding>
                             </Border.ToolTip>
                         </Border>
